# lexiflow

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  README.md  SECURITY.md  common-language.md  pyproject.toml
.agents/: README.md  mcp.json
.agents/agents/: semble-search.md
.agents/rules/: code-discovery.md  lexiflow.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: phase.md  phase.yml
.github/workflows/: ci.yml
docs/: README.md
docs/adr/: 0001-split-packages-and-ci-quality-gates.md  0002-persistent-job-queue-and-single-instance.md  0003-job-execution-architecture.md  0004-conceptual-docs-and-pr-plans.md  0005-ollama-embedding-provider-deferred.md  0006-desktop-ui-theme-strategy.md  README.md
docs/architecture/: overview.md
docs/guides/: agent-workflow.md  documentation-strategy.md  mcp-setup.md  pr-plan-template.md
docs/roadmap/: PHASE-TEMPLATE.md  README.md
scripts/: refresh-models-lock.py  theme_spike.py
tests/: conftest.py
tests/core/: test_app_layout.py  test_connection.py  test_document_title.py  test_duplicate_checker.py  test_group_registry.py  test_group_storage.py  test_imports.py  test_job_handlers_cleanup.py  test_job_handlers_translate.py  test_job_queue.py  test_language_catalog.py  test_language_store.py  test_library.py  test_library_paths.py  test_markdown_display.py  test_migrations.py  test_model_hints.py  test_models_huggingface_downloader.py  test_models_import.py  test_models_lockfile.py  test_models_requirements.py  test_models_store.py  test_paths.py  test_slug.py  (+11 more)
(+38 files in other folders)
